# WordsCounter

./: CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  README  Reader.cpp  Reader.h  main.cpp  main.qml
